[gd_scene load_steps=22 format=3 uid="uid://bd8oxh6ppsycf"]

[ext_resource type="Script" path="res://Cenas/cleopatra.gd" id="1_d8dmm"]
[ext_resource type="Texture2D" uid="uid://cyjv8vqyjkuyi" path="res://Assets Cle├│patra/Personagens/Monstros/Monstro 2 (m├║mia)/Mummy.png" id="2_m5uxl"]
[ext_resource type="Texture2D" uid="uid://dsovlr358i3ek" path="res://Assets Cle├│patra/Personagens/Monstros/Explosion-removebg-preview.png" id="3_7s6yc"]
[ext_resource type="Script" path="res://Cenas/worm_spawner.gd" id="4_aweca"]
[ext_resource type="PackedScene" uid="uid://t5j5i0xwudx8" path="res://Cenas/mumia.tscn" id="5_m5uxl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fcef0"]
atlas = ExtResource("2_m5uxl")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrnrb"]
atlas = ExtResource("2_m5uxl")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26vl"]
atlas = ExtResource("2_m5uxl")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8oo5"]
atlas = ExtResource("2_m5uxl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2bka"]
atlas = ExtResource("2_m5uxl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_41ero"]
atlas = ExtResource("2_m5uxl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_efl8c"]
atlas = ExtResource("2_m5uxl")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt20i"]
atlas = ExtResource("2_m5uxl")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vrnrb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcef0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrnrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26vl")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8oo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2bka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41ero")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efl8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt20i")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_aweca"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerDetection/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HitBox/Sprite2D2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_t2bka"]
resource_name = "attack"
length = 1.3
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"attack", &"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.900494, 0.951226, 1.2971264),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.20408122, 0.40124443, 0.42, 0.5984076, 0.73676777, 0.89588195),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.95237905, 1.2948204),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerDetection/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.955838, 1.2959734),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HitBox/Sprite2D2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.21, 0.42, 0.62, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_d8dmm"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.20407766, 0.33898237, 0.47618952),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m5uxl"]
_data = {
&"RESET": SubResource("Animation_aweca"),
&"attack": SubResource("Animation_t2bka"),
&"idle": SubResource("Animation_d8dmm")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_41ero"]
radius = 183.01093

[sub_resource type="CircleShape2D" id="CircleShape2D_efl8c"]
radius = 295.20502

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dt20i"]
radius = 53.0
height = 168.0

[node name="cleopatra" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_d8dmm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(571, 269)
scale = Vector2(8.125001, 8.875001)
sprite_frames = SubResource("SpriteFrames_vrnrb")
animation = &"attack"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_m5uxl")
}
autoplay = "idle"

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(572, 267)
shape = SubResource("CircleShape2D_41ero")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(570, 276)
shape = SubResource("CircleShape2D_efl8c")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="HitBox"]
visible = false
position = Vector2(664, 260)
scale = Vector2(0.29812282, 0.24682336)
texture = ExtResource("3_7s6yc")

[node name="Sprite2D2" type="Sprite2D" parent="HitBox"]
visible = false
position = Vector2(463, 265)
scale = Vector2(0.29812282, 0.24682336)
texture = ExtResource("3_7s6yc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(570, 264)
shape = SubResource("CapsuleShape2D_dt20i")

[node name="WormSpawner" type="Node2D" parent="."]
script = ExtResource("4_aweca")
mini_worm_node = ExtResource("5_m5uxl")

[node name="Timer" type="Timer" parent="WormSpawner"]
wait_time = 3.0
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="WormSpawner/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="WormSpawner/Timer" to="WormSpawner" method="_on_timer_timeout"]
